force-app/main/default/objects/pse__Forecast_Enhanced_Calculation__c/pse__Forecast_Enhanced_Calculation__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedCalculationHelp</customHelpPage>
    <description>Stores the parameters used to run a forecast calculation against a Region, Practice, or Group.</description>
    <label>Forecast Calculation</label>
    <nameField>
        <label>Forecast Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>