force-app/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Backlog_Calculation__c.field-meta.xml
<CustomField>
    <fullName>pse__Backlog_Calculation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related backlog calculation.</description>
    <inlineHelpText>A lookup to the related backlog calculation.</inlineHelpText>
    <label>Backlog Calculation</label>
    <referenceTo>pse__Backlog_Calculation__c</referenceTo>
    <relationshipLabel>Forecast Calculations</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>