force-app/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Current__c.field-meta.xml
<CustomField>
    <fullName>pse__Current__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this forecast calculation is the most recent for this RPG and time period.</description>
    <inlineHelpText>Indicates this forecast calculation is the most recent for this RPG and time period.</inlineHelpText>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>