force-app/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Forecast_Setup__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the forecast setup values used in this forecast calculation.</description>
    <inlineHelpText>A lookup to the forecast setup values used in this forecast calculation.</inlineHelpText>
    <label>Forecast Setup</label>
    <referenceTo>pse__Forecast_Setup__c</referenceTo>
    <relationshipLabel>Forecast Setup</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>