force-app/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The group for this forecast calculation.</description>
    <inlineHelpText>The group for this forecast calculation.</inlineHelpText>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Forecast Calculations</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>