force-app/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>The forecast calculation status.</description>
    <inlineHelpText>The forecast calculation status.</inlineHelpText>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>