force-app/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The time period for this forecast calculation.</description>
    <inlineHelpText>The time period for this forecast calculation.</inlineHelpText>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Forecast Calculations</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>