force-app/main/default/objects/pse__Forecast_Enhanced_Calculation__c/fields/pse__Total_Number_Of_Logs__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Number_Of_Logs__c</fullName>
    <description>The total number of logs created as a result of errors occurring during the forecast calculation process.</description>
    <inlineHelpText>The total number of logs created as a result of errors occurring during the forecast calculation process.</inlineHelpText>
    <label>Total Number of Logs</label>
    <summaryForeignKey>pse__Forecast_Enhanced_Calculation_Log__c.pse__Forecast_Enhanced_Calculation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>